--- a/web02/templates/index.html
+++ b/web02/templates/index.html
@@ -9,8 +9,14 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <div>
     <h1> Mùa đông không lạnh</h1>
     <a href="{{url_for('search',g = 0)}}">'Ban la nam?  </a>
     <a href="{{url_for('search',g = 1)}}">Ban la nu? </a>
+    </div>
+    <hr>
+    <div>
+        <a href="{{url_for('not_customer')}}">not_yet_connected customer</a>
+    </div>
 </body>
 </html>
